--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.8.*"
+        "laravel/framework": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
